test-cases/final-dump/type_error2.exp
Error detected during final normalisation of module(s) type_error2, type_error2.foo
[91mfinal-dump/type_error2.wybe:1:12: Unknown type notatype
[0m[91mfinal-dump/type_error2.wybe:1:12: Unknown type notatype
[0m[91mfinal-dump/type_error2.wybe:1:12: Unknown type notatype
[0m[91mfinal-dump/type_error2.wybe:1:12: Unknown type notatype
[0m
