test-cases/final-dump/type_error2.wybe
type foo { foo(bar:notatype) }
